--- a/todostyle.css
+++ b/todostyle.css
@@ -7,11 +7,22 @@
     width: 500px;
 }
 
-/* .schrim {
-    border-radius: 10px;
-    margin: auto;
-    border: black solid;
-} */
+ol {
+
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+li {
+    text-align: center;
+    padding-top: 5px;
+    display: block;
+    width: 400px;
+    height: 30px;
+    background-color: aliceblue;
+    border-radius: 5px;
+}
 
 h1 {
     text-align: center;
@@ -55,7 +66,8 @@ main {
 }
 
 .element {
-    color: violet;
+    background-color: rgb(242, 244, 245, 0.3);
+    color: aqua;
     text-decoration: line-through;
 }
 
